# RxScope

./: .env.example  .gitignore  ARCHITECTURE.md  GEMINI_PPT_PROMPT.md  README.md  RxScope_Client_Presentation.pptx  generate_ppt.py  pyproject.toml
src/rxscope/: __init__.py  cli.py  config.py
src/rxscope/agents/: classifier.py  confidence.py  db_writer.py  entity_resolver.py  extractor.py
src/rxscope/db/: __init__.py  queries.py  schema.sql
src/rxscope/export/: __init__.py
src/rxscope/pipeline/: __init__.py  graph.py
src/rxscope/scraper/: __init__.py
tests/: test_pipeline.py
